# cookiecutters

./: README.md
python/: cookiecutter.json
python/hooks/: post_gen_project.py
python/{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml
